# Xebra_G4_Analysis

./: README.md
Calibration_simulations_pointsource/: Calibration_simulations_pointsource.ipynb  Clustering_Prestudies.ipynb
Calibration_simulations_pointsource/.ipynb_checkpoints/: 00_Init-checkpoint.ipynb  01_MC-checkpoint.ipynb  Calibration_simulations_pointsource-checkpoint.ipynb  Clustering_Prestudies-checkpoint.ipynb
Clustering_XEBRA/: AnalysisSort.C  AnalysisSort.h  CMakeCache.txt  CMakeLists.txt  Clustering.cpp  Makefile  README.md  TempArrays.h  clustering  cmake_install.cmake
Clustering_XEBRA/parallel_processing/: isotopes_file  isotopes_file_complete  proc_many_files.py  proc_many_files.slurm
Derivations/: Calculations Meshes.ipynb
Derivations/.ipynb_checkpoints/: Calculations Meshes-checkpoint.ipynb
Influence_optical_parameters/: rLY_vs_z.ipynb  rLY_vs_z_comparison_data.ipynb
Influence_optical_parameters/.ipynb_checkpoints/: rLY_vs_z-checkpoint.ipynb
Influence_optical_parameters/output/: Influence_optical_parameters.pkl
Influence_optical_parameters/proc/: Influence_LXeRayScatterLength.pkl  Influence_LXeRayScatterLength_S2.pkl  Influence_LXeRefractionIndex.pkl  Influence_LXeRefractionIndex_S2.pkl  Influence_optical_parameters_S2.pkl
LCE/: DP_vs_SP.ipynb  LCE.ipynb  LCE_per_PMT.ipynb
LCE/.ipynb_checkpoints/: Influence optical parameters-checkpoint.ipynb  LCE-checkpoint.ipynb  LCE_per_PMT-checkpoint.ipynb
LCE/output/: optPhot_1e6_T=0.93_R=0.95_LCEvalues.txt  optPhot_1e6_noscint_T=0.80_R=0.95_LCEvalues.txt  optPhot_1e6_noscint_T=0.80_R=0.99_LCEvalues.txt  optPhot_1e6_noscint_T=0.85_R=0.95_LCEvalues.txt  optPhot_1e6_noscint_T=0.97_R=0.95_LCEvalues.txt  optPhot_S1_1e6_LCE_r2z_hist.pkl  (+49 more)
MCProcessor/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  XebraMCProcessor  XebraMCProcessor.cpp  automated_runs.py  automated_runs.sh  cmake_install.cmake
MCProcessor/include/: AnalysisSort.h  DBSCAN.hpp  MainProcessor.h  TempArrays.h
MCProcessor/include/Eigen/cmake/: EigenTesting.cmake
MCProcessor/include/Eigen/unsupported/Eigen/CXX11/src/Tensor/: TensorRandom.h
MCProcessor/src/: AnalysisSort.cc  MainProcessor.cc
Position_Reconstruction/: Fit LRF.nb
Position_Reconstruction_Centroids/: XeBRA_Position_Reconstruction_Centroids_Measurements_Analysis_Prestudies.ipynb
Position_Reconstruction_Comparison/: Position_Reconstruction_Comparison.ipynb  Position_Reconstruction_Comparison_Influence_Spacer_3.ipynb
Position_Reconstruction_LRF/: Random_positions_bins.ipynb  XeBRA_Position_Reconstruction_LRF_Strax.ipynb
Position_Reconstruction_NN/: Acitvation_Functions.ipynb  XeBRA_Position_Reconstruction_NN.ipynb  XeBRA_Position_Reconstruction_NN_Strax.ipynb  XeBRA_Position_Reconstruction_Optimize_NN.ipynb  XeBRA_Position_Reconstruction_Optimize_NN_Comparison.ipynb  XeBRA_Position_Reconstruction_Optimize_NN_Parameters.txt
Random_positions/: Random_positions_bins.ipynb
Visualisation_Geantinos/: XEBRA_G4_geometry.ipynb
pcfr31/: simple_job_pcfr31.sh  submit_pcfr31.py
(+188 files in other folders)
